Use `Spacer` for fixing gap between inputs

--- a/src/sso/connections/CreateConnection/saml/index.module.css
+++ b/src/sso/connections/CreateConnection/saml/index.module.css
@@ -10,7 +10,6 @@
 .fieldContainer {
   display: flex;
   flex-direction: column;
-  margin-bottom: 24px;
 }
 
 .label {
